2009-09-01  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: Bump Mono.Addins version.

2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.MSBuild.csproj: Added Default configuration.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.MSBuild.csproj: Fix build.

2009-08-21  Lluis Sanchez Gual  <lluis@novell.com>

	* ResolveAddinReferences.cs: Track api changes.

2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* Mono.Addins.targets:
	* mono-addins-msbuild.pc.in:
	* ResolveAddinReferences.cs:
	* Mono.Addins.MSBuild.csproj: Added a new project which
	  Implements an msbuild task for resolving add-in references.
